# mofa-new

./: README.md  README_cn.md  README_cn_qwen.md  requirements.txt  setup.py
.github/workflows/: ci-cd.yml  python-publish.yml
agent-hub/agent-template/: cookiecutter.json
agent-hub/hello-world/hello_world/: main.py
agent-hub/my_llm_agent/: pyproject.toml
agent-hub/my_llm_agent/my_llm_agent/: main.py
agent-hub/qwen_agent/: pyproject.toml
agent-hub/qwen_agent/qwen-agent/: main.py
agent-hub/qwen_agent/qwen_agent/: main.py
docker/: Dockerfile_x86
examples/my_llm_agent/: my_llm_dataflow.yml
examples/qwen_agent/: my_llm_dataflow.yml
mofa/: cli.py
mofa/agent-template/: cookiecutter.json
mofa/kernel/: .env
python/: requirements.txt  setup.py
